--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,60 @@
 </head>
 <body>
 
+    <header>
+        <div class="title"><h2>Weather App</h2></div>
+    </header>
+
+    <div class="main">
+        <div class="options">
+                <label for="location-search">Search for a location</label>
+                <input type="search" id="location-search">
+            <button id="toggle-temp">°C / °F</button>
+        </div>
+
+        <div class="current-weather">
+            <h3 id="location-name">London</h3>
+            <img src="#" class="weather-condition">
+            <p class="weather-time">Sunny</p>
+            <p class="weather-current-temp">2°C</p>
+            <p class="weather-feels-like">3°C</p>
+        </div>
+
+        <div class="current-details">
+            <div class="rain-card">Rain: 0%</div>
+            <div class="wind-card">
+                <h4>Wind</h4>
+                <p class="wind-direction">Direction: West</p>
+                <p class="wind-speed">Speed: 2 km/h</p>
+            </div>
+            <div class="humidity-card">Humidity: 5%</div>
+            <div class="cloud-card">Cloud Cover: 5%</div>
+        </div>
+    </div>
+
+    <div class="forecast-container">
+        <div class="forecast-card">
+            <h3 id="location-name">London</h3>
+            <img src="#" class="weather-condition">
+            <p class="weather-time">Sunny</p>
+            <p class="weather-current-temp">2°C</p>
+            <p class="weather-feels-like">3°C</p>
+        </div>
+        <div class="forecast-card">
+            <h3 id="location-name">London</h3>
+            <img src="#" class="weather-condition">
+            <p class="weather-time">Sunny</p>
+            <p class="weather-current-temp">2°C</p>
+            <p class="weather-feels-like">3°C</p>
+        </div>
+        <div class="forecast-card">
+            <h3 id="location-name">London</h3>
+            <img src="#" class="weather-condition">
+            <p class="weather-time">Sunny</p>
+            <p class="weather-current-temp">2°C</p>
+            <p class="weather-feels-like">3°C</p>
+        </div>
+        
+    </div>
 </body>
 </html>
