--- a/public/index.html
+++ b/public/index.html
@@ -8,61 +8,54 @@
     <title>The Weather</title>
 </head>
 <body>
-
-    <header>
-        <div class="title"><h2>Weather App</h2></div>
-    </header>
-
     <div class="main">
         <div class="options">
-                <label for="location-search">Search for a location</label>
-                <input type="search" id="location-search">
-            <button id="toggle-temp">°C / °F</button>
+            <label for="location-search">Search for a location</label>
+            <input type="search" id="location-search">
         </div>
-
-        <div class="current-weather">
-            <h3 id="location-name">London</h3>
-            <img src="#" class="weather-condition">
-            <p class="weather-time">Sunny</p>
-            <p class="weather-current-temp">2°C</p>
-            <p class="weather-feels-like">3°C</p>
-        </div>
+        <div class="main-current-container">
+            <div class="current-weather">
+                <h3 id="location-name">London</h3>
+                <p class="weather-time">12:00pm</p>
+                <p class="weather-current-temp">2°C</p>
+                <p class="weather-feels-like">Feels like 3°C</p>
+            </div>
+         </div>
 
         <div class="current-details">
-            <div class="rain-card">Rain: 0%</div>
-            <div class="wind-card">
-                <h4>Wind</h4>
-                <p class="wind-direction">Direction: West</p>
-                <p class="wind-speed">Speed: 2 km/h</p>
+            <div class="current-details-header">
+                <p>Chance of Rain</p>
+                <p>Wind</p>
+                <p>Humidity</p>
+                <p>Cloud Cover</p>
             </div>
-            <div class="humidity-card">Humidity: 5%</div>
-            <div class="cloud-card">Cloud Cover: 5%</div>
+            <div class="current-details-details">
+                <p>5%</p>
+                <p>5%</p>
+                <p>5%</p>
+                <p>5%</p>
+            </div>
+            
         </div>
-    </div>
 
-    <div class="forecast-container">
-        <div class="forecast-card">
-            <h3 id="location-name">London</h3>
-            <img src="#" class="weather-condition">
-            <p class="weather-time">Sunny</p>
-            <p class="weather-current-temp">2°C</p>
-            <p class="weather-feels-like">3°C</p>
+        <div class="forecast-container">
+            <h3>Forecast</h3>
+            <div class="forecast-card"> 
+                <h4 class="weather-time">15/11/23</h4>
+                <p class="weather-min-temp">Min: 2°C</p>
+                <p class="weather-max-like">Max: 3°C</p>
+            </div>
+            <div class="forecast-card">
+                <h4 class="weather-time">16/11/23</h4>
+                <p class="weather-min-temp">Min: 2°C</p>
+                <p class="weather-max-like">Max: 3°C</p>
+            </div>
+            <div class="forecast-card">
+                <h4 class="weather-time">17/11/23</h4>
+                <p class="weather-min-temp">Min: 2°C</p>
+                <p class="weather-max-like">Max: 3°C</p>
+            </div>
         </div>
-        <div class="forecast-card">
-            <h3 id="location-name">London</h3>
-            <img src="#" class="weather-condition">
-            <p class="weather-time">Sunny</p>
-            <p class="weather-current-temp">2°C</p>
-            <p class="weather-feels-like">3°C</p>
-        </div>
-        <div class="forecast-card">
-            <h3 id="location-name">London</h3>
-            <img src="#" class="weather-condition">
-            <p class="weather-time">Sunny</p>
-            <p class="weather-current-temp">2°C</p>
-            <p class="weather-feels-like">3°C</p>
-        </div>
-        
     </div>
 </body>
 </html>
