functions, page updating, and formatting complete

--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,10 @@
                 <p>Cloud Cover</p>
             </div>
             <div class="current-details-details">
-                <p>5%</p>
-                <p>5%</p>
-                <p>5%</p>
-                <p>5%</p>
+                <p id="details-rain">5%</p>
+                <p id="details-wind">5%</p>
+                <p id="details-humidity">5%</p>
+                <p id="details-clouds">5%</p>
             </div>
             
         </div>
@@ -41,19 +41,19 @@
         <div class="forecast-container">
             <h3>Forecast</h3>
             <div class="forecast-card"> 
-                <h4 class="weather-time">15/11/23</h4>
+                <h4 class="weather-date">15/11/23</h4>
                 <p class="weather-min-temp">Min: 2°C</p>
-                <p class="weather-max-like">Max: 3°C</p>
+                <p class="weather-max-temp">Max: 3°C</p>
             </div>
             <div class="forecast-card">
-                <h4 class="weather-time">16/11/23</h4>
+                <h4 class="weather-date">16/11/23</h4>
                 <p class="weather-min-temp">Min: 2°C</p>
-                <p class="weather-max-like">Max: 3°C</p>
+                <p class="weather-max-temp">Max: 3°C</p>
             </div>
             <div class="forecast-card">
-                <h4 class="weather-time">17/11/23</h4>
+                <h4 class="weather-date">17/11/23</h4>
                 <p class="weather-min-temp">Min: 2°C</p>
-                <p class="weather-max-like">Max: 3°C</p>
+                <p class="weather-max-temp">Max: 3°C</p>
             </div>
         </div>
     </div>
